--- a/Dialog/Scripts/Dialog Hud.uss
+++ b/Dialog/Scripts/Dialog Hud.uss
@@ -39,14 +39,17 @@
 	color: rgb(255, 255, 255);
 	-unity-text-align: middle-center;
 	font-size: 20px;
+	text-overflow: ellipsis;
 }
 #CharacterSpeach{
 	width: 1400px;
 	height: 175px;
 	background-color: rgba(0, 0, 0, 0.75);
 	color: rgb(255, 255, 255);
+	white-space: pre-wrap;
 	font-size: 40px;
 	padding: 10px;
+	text-overflow: ellipsis;
 }
 #Buttons{
 	justify-content: space-around;
