--- a/System/Huds/Scripts/Menu Hud.uss
+++ b/System/Huds/Scripts/Menu Hud.uss
@@ -4,7 +4,7 @@
 	border-width : 0px;
 	border-radius : 75px;
 }
-#BaseElement{
+#RootElement{
 	width : 100%;
 	height : 100%;
 	border-radius : 0px;
