--- a/System/Huds/Scripts/Transicion Hud.uss
+++ b/System/Huds/Scripts/Transicion Hud.uss
@@ -2,7 +2,7 @@
 	margin: 0px;
 	padding: 0px;
 }
-#BaseElement{
+#RootElement{
 	opacity: 0;
 	width: 100%;
 	height: 100%;
@@ -14,4 +14,26 @@
 #ShowText{
 	font-size: 60px;
 	color: rgb(255, 255, 255);
+	margin-bottom: 20px;
+}
+#LoadingBar{
+	width: 50%;
+	height: 20px;
+	background-color: rgb(255, 255, 255);
+	border-radius: 10px;
+}
+.unity-progress-bar__container{
+	width: 100%;
+	height: 100%;
+	min-height: 100%;
+}
+.unity-progress-bar__background{
+	justify-content: center;
+	align-content: center;
+	background-color: rgb(192, 192, 192);
+	border-radius: 3px;
+}
+.unity-progress-bar__progress{
+	border-radius: 2px;
+	background-color : rgb(255, 160, 0);
 }
