--- a/Guwba/Scripts/Visual Guwba.uss
+++ b/Guwba/Scripts/Visual Guwba.uss
@@ -7,18 +7,28 @@
     height: 100%;
 }
 #GroupElements {
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: space-around;
     margin: 10px;
     width: 40%;
-    height: 100px;
+    height: 200px;
 }
-#Lifes, #Coins {
+#Texts {
     flex-direction: row;
     align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 50%;
+    align-self: center;
+}
+#SubText {
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
     height: 100%;
-    align-self: flex-end;
+    align-self: center;
 }
 #LifeText, #CoinText {
     font-size: 40px;
@@ -33,4 +43,19 @@
 }
 #CoinIcon {
     background-image: url("project://database/Assets/Items/Designs/Coin Frame.png");
+}
+#Vitality {
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    height: 25%;
+}
+#Vitality VisualElement {
+    width: 25%;
+    height: 100%;
+    background-color: rgb(96, 0, 0);
+    border-width: 5px;
+    border-radius: 2.5px;
+    border-color: rgb(0, 0, 0);
 }
