--- a/Guwba/Scripts/Guwba Hud.uxml
+++ b/Guwba/Scripts/Guwba Hud.uxml
@@ -1,6 +1,6 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
     <Style src="project://database/Assets/Guwba/Scripts/Visual%20Hud%20Guwba.uss?fileID=7433441132597879392&amp;guid=09c1d2f441fe8624d8a5be5bba1f7864&amp;type=3#Visual Hud Guwba" />
-    <ui:GroupBox name="BaseElement" class="BaseElement">
+    <ui:VisualElement name="RootElement">
         <ui:GroupBox name="GroupElements" class="GroupElements">
             <ui:GroupBox name="Texts">
                 <ui:GroupBox name="SubText">
@@ -19,5 +19,5 @@
                 <ui:VisualElement name="Vitality4" />
             </ui:GroupBox>
         </ui:GroupBox>
-    </ui:GroupBox>
+    </ui:VisualElement>
 </ui:UXML>
