--- a/Dialog/Scripts/Dialog Hud.uxml
+++ b/Dialog/Scripts/Dialog Hud.uxml
@@ -1,16 +1,16 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
-    <Style src="project://database/Assets/Di%C3%A1logos/C%C3%B3digos/Dialog%20Hud.uss?fileID=7433441132597879392&amp;guid=9f2eb5b6cdc88fc449612df3a1e01507&amp;type=3#Dialog Hud" />
-        <ui:GroupBox class="BaseElement">
+    <Style src="project://database/Assets/Dialog/Scripts/Dialog%20Hud.uss?fileID=7433441132597879392&amp;guid=9f2eb5b6cdc88fc449612df3a1e01507&amp;type=3#Dialog Hud" />
+    <ui:VisualElement name="RootElement">
         <ui:GroupBox name="DialogBox">
             <ui:VisualElement name="CharacterIcon" class="Padrao" />
             <ui:GroupBox name="Texts">
-                <ui:Label name="CharacterName" text="Character Name" class="Texto" />
-                <ui:Label text="Character Speach" name="CharacterSpeach" class="Texto" />
+                <ui:Label name="CharacterName" text="Character Name" parse-escape-sequences="true" class="Texto" />
+                <ui:Label text="Character Speach" name="CharacterSpeach" parse-escape-sequences="true" class="Texto" />
             </ui:GroupBox>
             <ui:GroupBox name="Buttons">
                 <ui:Button text="X" name="CloseDialog" class="CloseDialog" />
                 <ui:Button text="&gt;&gt;" name="AdvanceDialog" class="Texto" />
             </ui:GroupBox>
         </ui:GroupBox>
-    </ui:GroupBox>
+    </ui:VisualElement>
 </ui:UXML>
