--- a/Dialog/Scripts/Dialog Hud.uss
+++ b/Dialog/Scripts/Dialog Hud.uss
@@ -2,7 +2,7 @@
 	margin: 0px;
 	padding: 0px;
 }
-.BaseElement{
+#RootElement{
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-around;
