--- a/System/Scripts/Transicion Hud.uss
+++ b/System/Scripts/Transicion Hud.uss
@@ -1,39 +1,42 @@
-*{
-	margin: 0px;
-	padding: 0px;
+* {
+    margin: 0;
+    padding: 0;
 }
-#RootElement{
-	opacity: 0;
-	width: 100%;
-	height: 100%;
-	align-items: center;
-	justify-content: center;
-	align-content: center;
-	background-color: rgb(0, 0, 0);
+
+#RootElement {
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    background-color: rgb(0, 0, 0);
 }
-#ShowText{
-	font-size: 60px;
-	color: rgb(255, 255, 255);
-	margin-bottom: 20px;
+
+#LoadingBar {
+    top: 100px;
+    width: 50%;
+    height: 60px;
+    background-color: rgb(0, 0, 0);
+    border-radius: 0;
+    border-width: 1px;
+    border-color: rgb(255, 255, 255);
+    padding: 10px;
 }
-#LoadingBar{
-	width: 50%;
-	height: 20px;
-	background-color: rgb(255, 255, 255);
-	border-radius: 10px;
+
+#unity-progress-bar {
+    width: 100%;
+    height: 100%;
+    min-height: 100%;
 }
-.unity-progress-bar__container{
-	width: 100%;
-	height: 100%;
-	min-height: 100%;
+
+.unity-progress-bar__background {
+    justify-content: center;
+    align-content: center;
+    background-color: rgb(0, 0, 0);
+    border-color: rgb(0, 0, 0);
 }
-.unity-progress-bar__background{
-	justify-content: center;
-	align-content: center;
-	background-color: rgb(192, 192, 192);
-	border-radius: 3px;
-}
-.unity-progress-bar__progress{
-	border-radius: 2px;
-	background-color : rgb(255, 160, 0);
+
+.unity-progress-bar__progress {
+    background-color: rgb(255, 255, 255);
 }
