--- a/Guwba/Guwba Hud.uss
+++ b/Guwba/Guwba Hud.uss
@@ -39,7 +39,7 @@
     height: 100%;
 }
 #LifeIcon{
-    background-image: url("project://database/Assets/Guwba/Designs/Guwba Icon.png");
+    background-image: url("project://database/Assets/Items/Designs/Guwba Extra Life (Heart).png");
 }
 #CoinIcon {
     background-image: url("project://database/Assets/Items/Designs/Coin Frame.png");
