--- a/Guwba/Guwba Hud.uss
+++ b/Guwba/Guwba Hud.uss
@@ -9,11 +9,11 @@
 #GroupElements {
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-content: center;
     margin: 10px;
     width: 40%;
-    height: 200px;
+    height: 250px;
 }
 #Texts {
     flex-direction: row;
@@ -22,6 +22,7 @@
     width: 100%;
     height: 50%;
     align-self: center;
+    margin-bottom: 10px;
 }
 #SubText {
     flex-direction: row;
@@ -36,24 +37,24 @@
     margin-left: 20px;
 }
 #LifeIcon, #CoinIcon{
-    width: 100px;
+    width: 125px;
     height: 100%;
 }
 #LifeIcon{
-    background-image: url("project://database/Assets/Items/Designs/Guwba Extra Life (Heart).png");
+    background-image: url("project://database/Assets/Items/Designs/Guwba Heart.png");
 }
 #CoinIcon {
     background-image: url("project://database/Assets/Items/Designs/Coin Frame.png");
 }
-#Vitality {
+#Vitality, #RecoverVitality {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    height: 25%;
+    height: 22.5%;
 }
 #VitalityPiece {
     height: 100%;
-    background-color: rgb(96, 0, 0);
-    border-width: 7.5px;
-    border-color: rgb(32, 0, 0);
+}
+#RecoverVitalityPiece {
+    height: 75%;
 }
