--- a/Items/Level Gate Hud.uss
+++ b/Items/Level Gate Hud.uss
@@ -33,7 +33,7 @@
     height: 100%;
 }
 #LifeIcon{
-    background-image: url("project://database/Assets/Guwba/Designs/Guwba Icon.png");
+    background-image: url("project://database/Assets/Guwba/Designs/Guwba Heart.png");
 }
 #CoinIcon {
     background-image: url("project://database/Assets/Items/Designs/Coin Frame.png");
