--- a/System/Huds/Menu Hud.uss
+++ b/System/Huds/Menu Hud.uss
@@ -7,7 +7,7 @@
 	width : 100%;
 	height : 100%;
 	border-radius : 0px;
-	background-image: url("project://database/Assets/Scenes/Worlds/Menu/Designs/Background Menu.jpeg");
+	background-image: url("project://database/Assets/System/Huds/Designs/Background Menu.jpeg");
 	align-items: center;
 	justify-content: space-around;
 }
@@ -16,20 +16,38 @@
 	height : 100%;
 	border-radius : 0px;
 	align-items: center;
-	justify-content: space-evenly;
+	justify-content: center;
 }
 #LogoBrand
 {
 	font-size : 60px;
 	-unity-text-align : middle-center;
-	background-image: none;
-	width: 1000px;
-	height: 200px;
-	-unity-background-image-tint-color: rgb(255, 160, 0);
-	background-color: rgb(255, 160, 0);
+	background-image: url("project://database/Assets/System/Designs/Guwba Prime Adventure Logo Transparent.png");
+	width: 600px;
+	height: 600px;
 	justify-content: center;
 	align-self: center;
 	border-radius: 50px;
+}
+#MainButtons{
+	width : 400px;
+	height : 400px;
+	border-radius : 0px;
+	align-items: center;
+	justify-content: space-evenly;
+}
+#MainButtons Button
+{
+	background-color : rgba(255, 255, 0, 0.5);
+	width : 300px;
+	height : 62.5px;
+	font-size : 30px;
+	border-radius: 35px;
+	-unity-text-align : middle-center;
+}
+#MainButtons Button:hover
+{
+	background-color : rgba(255, 160, 0, 0.85);
 }
 #Saves{
 	display: none;
@@ -104,19 +122,4 @@
 	border-color : rgb(255, 160, 0);
 	background-color : rgb(255, 255, 32);
 	border-width : 5px;
-}
-.Button
-{
-	background-color : rgb(255, 160, 0);
-	width : 600px;
-	height : 125px;
-	font-size : 40px;
-	border-radius: 50px;
-	-unity-text-align : middle-center;
-}
-.Button:hover
-{
-	border-color : rgb(255, 160, 0);
-	background-color : rgb(255, 255, 32);
-	border-width : 10px;
 }
