--- a/Guwba/Guwba Hud.uss
+++ b/Guwba/Guwba Hud.uss
@@ -3,26 +3,21 @@
     padding: 0;
 }
 #RootElement {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
     width: 100%;
     height: 100%;
-}
-#GroupElements {
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    align-content: center;
-    margin: 10px;
-    width: 40%;
-    height: 250px;
 }
 #Texts {
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
-    width: 100%;
-    height: 50%;
-    align-self: center;
-    margin-bottom: 10px;
+    justify-content: flex-start;
+    width: 768px;
+    height: 125px;
+    margin: 10px;
+    margin-bottom: 20px;
+    margin-left: 20px;
 }
 #SubText {
     flex-direction: row;
@@ -46,15 +41,38 @@
 #CoinIcon {
     background-image: url("project://database/Assets/Items/Designs/Coin Frame.png");
 }
+#VitalityShow{
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    align-content: center;
+    width: 768px;
+    height: 112.5px;
+    margin: 10px;
+    margin-left: 20px;
+}
+#VitalityGroup{
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    align-content: center;
+    height: 100%;
+}
 #Vitality, #RecoverVitality {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    height: 22.5%;
+    width: 100%;
+    height: 50%;
 }
 #VitalityPiece {
     height: 100%;
 }
 #RecoverVitalityPiece {
     height: 75%;
+}
+#FallDamageText {
+    opacity: 0;
+    font-size: 40px;
+    margin-left: 20px;
 }
