--- a/Story/Dialog Hud.uss
+++ b/Story/Dialog Hud.uss
@@ -14,27 +14,26 @@
 #DialogBox{
 	flex-direction: row;
 	align-items: center;
-	justify-content: space-around;
+	justify-content: space-evenly;
 	align-self: flex-end;
 	width: 100%;
 	height: 300px;
 }
 #Texts{
 	align-items: flex-start;
-	justify-content: center;
+	justify-content: space-between;
+	align-content: stretch;
 	width: 1400px;
 	height: 250px;
 }
 #CharacterIcon{
 	width: 250px;
 	height: 250px;
-	margin-left: 25px;
 	background-color: rgba(0, 0, 0, 0.75);
 }
 #CharacterName{
 	width: 250px;
-	height: 30px;
-	margin-bottom: 25px;
+	height: 40px;
 	background-color: rgba(0, 0, 0, 0.5);
 	color: rgb(255, 255, 255);
 	-unity-text-align: middle-center;
@@ -43,7 +42,7 @@
 }
 #CharacterSpeach{
 	width: 1400px;
-	height: 175px;
+	height: 200px;
 	background-color: rgba(0, 0, 0, 0.75);
 	color: rgb(255, 255, 255);
 	white-space: pre-wrap;
@@ -52,10 +51,11 @@
 	text-overflow: ellipsis;
 }
 #AdvanceDialog{
-	width: 175px;
-	height: 100px;
+	width: 150px;
+	height: 200px;
 	-unity-font-style: bold;
 	font-size: 60px;
 	border-width: 0px;
 	background-color: rgb(255, 255, 255);
+	margin-top: 50px;
 }
