--- a/Items/Level Gate Hud.uxml
+++ b/Items/Level Gate Hud.uxml
@@ -1,20 +1,8 @@
 <engine:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:engine="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
-    <Style src="project://database/Assets/Items/Scripts/Level%20Gate.uss?fileID=7433441132597879392&amp;guid=19cc52b042dc0de46b9f68dac1510972&amp;type=3#Level Gate" />
+    <Style src="project://database/Assets/Items/Designs/Level%20Gate%20Hud.uss?fileID=7433441132597879392&amp;guid=19cc52b042dc0de46b9f68dac1510972&amp;type=3#Level Gate Hud" />
     <engine:VisualElement name="RootElement">
-        <engine:GroupBox name="ElementsGroup">
-            <engine:GroupBox name="Lifes">
-                <engine:VisualElement name="LifeIcon" />
-                <engine:Label text="X 0" name="LifeText" />
-            </engine:GroupBox>
-            <engine:GroupBox name="Coins">
-                <engine:VisualElement name="CoinIcon" />
-                <engine:Label text="X 0" name="CoinText" />
-            </engine:GroupBox>
-        </engine:GroupBox>
-        <engine:GroupBox name="ButtonsGroup">
-            <engine:Button name="Level"/>
-            <engine:Button name="Boss"/>
-            <engine:Button name="Scenes"/>
-        </engine:GroupBox>
+        <engine:Button name="Level" />
+        <engine:Button name="Boss" />
+        <engine:Button name="Scenes" />
     </engine:VisualElement>
 </engine:UXML>
