--- a/Huds/Configuration Hud.uss
+++ b/Huds/Configuration Hud.uss
@@ -20,63 +20,44 @@
     align-self: center;
 }
 
-#LeftPage {
+#LeftPage, #RightPage {
     width: 47.5%;
-    height: 100%;
+    height: 90%;
     align-items: center;
     justify-content: space-evenly;
     align-self: center;
 }
 
-#Sounds {
-    width: 100%;
+#Output {
+    width: 90%;
     height: 40%;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     align-self: center;
 }
 
-#Slider1 {
-    width: 100%;
-    height: 25%;
+#Sliders {
+    width: 90%;
+    height: 100%;
     align-items: center;
     justify-content: space-evenly;
     align-self: center;
-    flex-direction: row;
+    flex-direction: column;
 }
 
-#Slider2 {
-    width: 100%;
-    height: 25%;
+#Output #Toggles {
+    width: 10%;
+    height: 100%;
     align-items: center;
     justify-content: space-evenly;
     align-self: center;
-    flex-direction: row;
-}
-
-#Slider3 {
-    width: 100%;
-    height: 25%;
-    align-items: center;
-    justify-content: space-evenly;
-    align-self: center;
-    flex-direction: row;
-}
-
-#Slider4 {
-    width: 100%;
-    height: 25%;
-    align-items: center;
-    justify-content: space-evenly;
-    align-self: center;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 Slider {
-    width: 75%;
-    height: 80px;
-    min-height: 80px;
+    width: 90%;
+    height: 25%;
     padding-bottom: 55px;
     flex-direction: column;
     align-items: flex-start;
@@ -90,8 +71,7 @@ Slider Label {
 
 Slider VisualElement {
     width: 100%;
-    height: 30px;
-    min-height: 30px;
+    height: 80%;
     flex-direction: column;
     align-content: center;
     align-self: center;
@@ -99,6 +79,7 @@ Slider VisualElement {
 
 Slider #unity-drag-container {
     width: 100%;
+    height: 100%;
     flex-direction: row;
     justify-content: flex-start;
     align-content: center;
@@ -107,7 +88,7 @@ Slider #unity-drag-container {
 }
 
 Slider #unity-tracker {
-    height: 25px;
+    height: 75%;
     background-color: rgb(192, 192, 192);
     flex-direction: row;
     align-self: center;
@@ -115,57 +96,155 @@ Slider #unity-tracker {
 }
 
 Slider #unity-dragger {
-    width: 20px;
+    width: 2.5%;
+    height: 75%;
     background-color: rgb(255, 160, 0);
     flex-direction: row;
     border-radius: 10px;
 }
 
-Toggle {
+#Output Toggle {
     width: 40px;
+    height: 25%;
+    align-self: center;
+}
+
+#Output Toggle VisualElement {
+    width: 100%;
+    height: 40px;
+    align-self: center;
+    justify-content: center;
+    align-content: center;
+    border-radius: 10px;
+    border-color: rgba(255, 255, 0, 0.5);
+    background-color: rgba(255, 255, 0, 0.5);
+}
+
+#Output Toggle #unity-checkmark {
+    width: 100%;
+    height: 100%;
+    align-self: center;
+    border-radius: 10px;
+}
+
+#Output Toggle VisualElement:checked {
+    background-color: rgb(255, 160, 0);
+}
+
+#ScreenBrightness {
+    width: 90%;
+    height: 10%;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    align-self: center;
+}
+
+#DropsDown {
+    flex-direction: row;
+    height: 10%;
+    width: 100%;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    align-self: center;
+}
+
+#DropsDown DropdownField {
+    width: 30%;
+    flex-direction: column;
+}
+
+DropdownField Label {
+    font-size: 25px;
+}
+
+DropdownField > VisualElement {
+    width: 100%;
+    height: 50%;
+    border-radius: 10px;
+    align-self: center;
+    justify-content: center;
+    align-content: center;
+    background-color: rgba(255, 255, 0, 0.5);
+}
+
+.unity-base-dropdown__container-outer {
+    border-radius: 10px;
+    background-color: rgba(255, 255, 0, 0.5);
+}
+
+.unity-base-dropdown__container-inner {
+    border-radius: 10px;
+    background-color: rgba(255, 255, 0, 0.5);
+}
+
+DropdownField PopupTextElement {
+    font-size: 20px;
+    color: rgb(0, 0, 0);
+}
+
+DropdownField PopupTextElement:hover, DropdownField PopupTextElement:hover:enabled {
+    background-color: rgb(255, 160, 0);
+}
+
+.unity-base-dropdown__item {
+    font-size: 20px;
+    color: rgb(0, 0, 0);
+}
+
+.unity-base-dropdown__item:hover {
+    background-color: rgb(255, 160, 0);
+}
+
+.unity-base-dropdown__item:hover:enabled {
+    background-color: rgb(255, 160, 0);
+}
+
+.unity-base-dropdown__checkmark {
+    width: 20px;
+    height: 20px;
+    color: rgb(0, 0, 0);
+    align-self: center;
+}
+
+#DropsDown Toggle {
+    width: 5%;
     height: 40px;
     align-self: center;
 }
 
-Toggle VisualElement {
+#DropsDown Toggle VisualElement {
     width: 40px;
     height: 40px;
     align-self: center;
     justify-content: center;
     align-content: center;
     border-radius: 10px;
+    border-color: rgba(255, 255, 0, 0.5);
     background-color: rgba(255, 255, 0, 0.5);
 }
 
-Toggle #unity-checkmark {
+#DropsDown Toggle #unity-checkmark {
     width: 40px;
-    height: 40px;
+    height: 100%;
     align-self: center;
     border-radius: 10px;
 }
 
-Toggle #unity-checkmark:checked, Toggle VisualElement:checked {
+#DropsDown Toggle VisualElement:checked {
     background-color: rgb(255, 160, 0);
-}
-
-#RightPage {
-    width: 47.5%;
-    height: 100%;
-    align-items: center;
-    justify-content: space-around;
-    align-self: center;
 }
 
 #Buttons {
     flex-direction: row;
     width: 100%;
-    align-items: flex-end;
+    align-items: center;
     justify-content: space-evenly;
     align-self: flex-start;
 }
 
 #Buttons Button, #ConfirmationButtons Button {
-    width: 200px;
+    width: 20%;
     height: 100px;
     background-color: rgba(255, 255, 0, 0.5);
     font-size: 40px;
