--- a/Huds/Configuration Hud.uss
+++ b/Huds/Configuration Hud.uss
@@ -149,9 +149,10 @@ Slider #unity-dragger {
     align-self: center;
 }
 
-#DropsDown DropdownField {
+DropdownField {
     width: 30%;
     flex-direction: column;
+    justify-content: space-around;
 }
 
 DropdownField Label {
@@ -168,35 +169,63 @@ DropdownField > VisualElement {
     background-color: rgba(255, 255, 0, 0.5);
 }
 
-.unity-base-dropdown__container-outer {
+.unity-base-dropdown__container-outer, .unity-base-dropdown__container-inner {
+    border-radius: 10px;
+    border-width: 0px;
+    background-color: rgba(255, 255, 0, 0.5);
+}
+
+#unity-content-and-vertical-scroll-container {
+    width: 100%;
+    height: 100%;
     border-radius: 10px;
     background-color: rgba(255, 255, 0, 0.5);
 }
 
-.unity-base-dropdown__container-inner {
+#unity-content-viewport {
+    width: 100%;
+    height: 100%;
     border-radius: 10px;
     background-color: rgba(255, 255, 0, 0.5);
 }
 
-DropdownField PopupTextElement {
+#unity-content-container {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 0, 0.5);
+}
+
+PopupTextElement {
+    width: 100%;
+    height: 100%;
     font-size: 20px;
     color: rgb(0, 0, 0);
+    border-radius: 10px;
+    background-color: rgba(255, 255, 0, 0.5);
 }
 
-DropdownField PopupTextElement:hover, DropdownField PopupTextElement:hover:enabled {
+DropdownField > VisualElement VisualElement {
+    width: 0%;
+    height: 0%;
+}
+
+DropdownField:hover PopupTextElement, DropdownField:active PopupTextElement {
     background-color: rgb(255, 160, 0);
 }
 
 .unity-base-dropdown__item {
     font-size: 20px;
     color: rgb(0, 0, 0);
+    border-radius: 10px;
+    background-color: rgba(255, 255, 0, 0.5);
 }
 
 .unity-base-dropdown__item:hover {
     background-color: rgb(255, 160, 0);
 }
 
-.unity-base-dropdown__item:hover:enabled {
+.unity-base-dropdown__item:hover:active {
     background-color: rgb(255, 160, 0);
 }
 
