--- a/Characters/Guwba Hud.uss
+++ b/Characters/Guwba Hud.uss
@@ -13,23 +13,23 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    width: 576px;
-    height: 100px;
-    margin-left: 20px;
+    width: 1152px;
+    height: 200px;
+    margin-left: 40px;
 }
 #SubIcon {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    width: 25%;
-    height: 75px;
+    width: 30%;
+    height: 150px;
     align-self: flex-end;
 }
 #LifeText, #CoinText {
-    font-size: 30px;
+    font-size: 60px;
 }
 #LifeIcon, #CoinIcon{
-    width: 75px;
+    width: 150px;
     height: 100%;
 }
 #CoinIcon {
@@ -40,9 +40,9 @@
     align-items: center;
     justify-content: flex-start;
     align-content: center;
-    width: 576px;
-    height: 150px;
-    margin-left: 20px;
+    width: 1152px;
+    height: 300px;
+    margin-left: 40px;
 }
 #BarGroup {
     flex-direction: column;
@@ -56,8 +56,12 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 40px;
+    height: 80px;
     align-self: flex-start;
+}
+#VitalityPiece {
+    height: 100%;
+    border-radius: 40px;
 }
 #RecoverVitality {
     flex-direction: row;
@@ -65,8 +69,12 @@
     justify-content: space-between;
     border-width: 0px;
     width: 100%;
-    height: 40px;
+    height: 80px;
     align-self: center;
+}
+#RecoverVitalityPiece {
+    height: 100%;
+    border-radius: 20px;
 }
 #BunnyHop {
     flex-direction: row;
@@ -74,22 +82,17 @@
     justify-content: space-between;
     border-width: 0px;
     width: 100%;
-    height: 10px;
+    height: 20px;
     align-self: flex-end;
-}
-#VitalityPiece {
-    height: 100%;
-}
-#RecoverVitalityPiece {
-    height: 100%;
 }
 #BunnyHopPiece {
     height: 100%;
+    border-radius: 10px;
 }
 #FallDamageText {
     opacity: 0;
-    font-size: 30px;
-    margin-top: 10px;
-    margin-left: 20px;
+    font-size: 60px;
+    margin-top: 20px;
+    margin-left: 40px;
     align-self: flex-start;
 }
