--- a/Story/Dialog Hud.uss
+++ b/Story/Dialog Hud.uss
@@ -17,45 +17,45 @@
 	justify-content: space-evenly;
 	align-self: flex-end;
 	width: 100%;
-	height: 300px;
+	height: 600px;
 }
 #Texts{
 	align-items: flex-start;
 	justify-content: space-between;
 	align-content: stretch;
-	width: 1400px;
-	height: 250px;
+	width: 2800px;
+	height: 500px;
 }
 #CharacterIcon{
-	width: 250px;
-	height: 250px;
+	width: 500px;
+	height: 500px;
 	background-color: rgba(0, 0, 0, 0.75);
 }
 #CharacterName{
-	width: 250px;
-	height: 40px;
+	width: 500px;
+	height: 80px;
 	background-color: rgba(0, 0, 0, 0.5);
 	color: rgb(255, 255, 255);
 	-unity-text-align: middle-center;
-	font-size: 20px;
+	font-size: 40px;
 	text-overflow: ellipsis;
 }
 #CharacterSpeach{
-	width: 1400px;
-	height: 200px;
+	width: 2800px;
+	height: 400px;
 	background-color: rgba(0, 0, 0, 0.75);
 	color: rgb(255, 255, 255);
 	white-space: pre-wrap;
-	font-size: 25px;
-	padding: 10px;
+	font-size: 50px;
+	padding: 20px;
 	text-overflow: ellipsis;
 }
-#AdvanceDialog{
-	width: 150px;
-	height: 200px;
+#AdvanceSpeach{
+	width: 300px;
+	height: 400px;
 	-unity-font-style: bold;
-	font-size: 60px;
+	font-size: 120px;
 	border-width: 0px;
 	background-color: rgb(255, 255, 255);
-	margin-top: 50px;
+	margin-top: 100px;
 }
