--- a/Characters/Guwba Hud.uss
+++ b/Characters/Guwba Hud.uss
@@ -63,12 +63,12 @@
 }
 #VitalityPiece {
     width: 40px;
-    height: 40px;
+    height: 100%;
     border-radius: 15px;
 }
 #RecoverVitality {
     border-width: 0px;
-    height: 40px;
+    height: 30px;
     align-self: center;
 }
 #RecoverVitalityPiece {
