--- a/Huds/Configuration Hud.uss
+++ b/Huds/Configuration Hud.uss
@@ -107,14 +107,33 @@ Slider #unity-dragger, SliderInt #unity-dragger{
     flex-direction: row;
     border-radius: 10px;
 }
+#FrameRateGroup{
+    width: 90%;
+    flex-direction: row;
+    justify-content: space-between;
+    align-content: center;
+    align-items: center;
+}
+#FrameRateGroup #FrameRate{
+    width: 90%;
+    height: 112.5%;
+    padding-bottom: 55px;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    align-self: center;
+}
+#FrameRateText{
+    font-size: 25px;
+}
 #Output Toggle {
-    width: 80px;
+    width: 40px;
     height: 25%;
     align-self: center;
 }
 #Output Toggle VisualElement {
     width: 100%;
-    height: 80px;
+    height: 40px;
     align-self: center;
     justify-content: center;
     align-content: center;
@@ -142,7 +161,7 @@ Slider #unity-dragger, SliderInt #unity-dragger{
 #DropsDown {
     flex-direction: row;
     height: 10%;
-    width: 100%;
+    width: 90%;
     align-items: flex-start;
     justify-content: space-evenly;
     align-self: center;
@@ -246,10 +265,10 @@ DropdownField:hover PopupTextElement, DropdownField:active PopupTextElement {
 }
 #Buttons {
     flex-direction: row;
-    width: 100%;
+    width: 90%;
     align-items: center;
     justify-content: space-evenly;
-    align-self: flex-start;
+    align-self: center;
 }
 #Buttons Button, #ConfirmationButtons Button {
     width: 20%;
