--- a/Huds/Configuration Hud.uxml
+++ b/Huds/Configuration Hud.uxml
@@ -34,7 +34,10 @@
                     </ui:GroupBox>
                 </ui:GroupBox>
                 <ui:GroupBox name="Sliders">
-                    <ui:SliderInt label="Frame Rate" name="FrameRate" />
+                    <ui:GroupBox name="FrameRateGroup">
+                        <ui:SliderInt label="Frame Rate" name="FrameRate" />
+                        <ui:Label text="120" name="FrameRateText" />
+                    </ui:GroupBox>
                     <ui:Slider label="Screen Brightness" name="ScreenBrightness" />
                 </ui:GroupBox>
             </ui:GroupBox>
