--- a/Characters/Guwba Hud.uss
+++ b/Characters/Guwba Hud.uss
@@ -51,7 +51,7 @@
     align-content: center;
     height: 100%;
 }
-#Vitality, #RecoverVitality, #BunnyHop {
+#Vitality, #RecoverVitality, #StunResistance, #BunnyHop {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
@@ -66,7 +66,7 @@
     height: 100%;
     border-radius: 10px;
 }
-#RecoverVitality {
+#RecoverVitality, #StunResistance {
     border-width: 0px;
     height: 30px;
     align-self: center;
@@ -74,6 +74,10 @@
 #RecoverVitalityPiece {
     height: 100%;
     border-radius: 10px;
+}
+#StunResistancePiece {
+    height: 100%;
+    border-radius: 5px;
 }
 #BunnyHop {
     border-width: 0px;
